# magnifica-humanitas-epub

./: .gitignore  Magnifica Humanitas - Pope Leo XIV.epub  README.md  build_magnifica_humanitas_epub.py  en.yaml  pl.yaml  pyproject.toml
